--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "socket.io-client": "^4.7.2",
     "stripe.js": "^0.0.1",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
